--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 </head>
 
 <body>
-	<div id="elm"></div>
-	<script src="main.compiled.js" type="text/javascript"></script>
+	<div id="elm">Loading...</div>
+	<script src="main.min.js" type="text/javascript"></script>
 	<script>
 		var app = Elm.Main.init({ node: document.getElementById("elm") });
 	</script>
