--- a/play.html
+++ b/play.html
@@ -1,9 +1,10 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="Description" content="Simon Gustavsson - Developer of Software">
 	<title>Main</title>
 	<style type="text/css">
 		html,
