--- a/play.html
+++ b/play.html
@@ -1,10 +1,8 @@
 <!DOCTYPE HTML>
-<html lang="en">
+<html>
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="Description" content="Simon Gustavsson - Developer of Software">
 	<title>Main</title>
 	<style type="text/css">
 		html,
@@ -13,31 +11,11 @@
 			height: 100%;
 			margin: 0
 		}
-
-		.switch-notice {
-			padding: 0.5em;
-			background: #EEE;
-			color: #123;
-			border-bottom: 3px #000 solid;
-		}
-
-		.switch-notice>a {
-			margin-left: 1em;
-			text-decoration: none;
-		}
-
-		.switch-notice>a:visited {
-			color: blue;
-		}
 	</style>
 </head>
 
 <body>
-	<div id="elm">Loading...</div>
-	<script src="main.min.js" type="text/javascript"></script>
-	<script>
-		var app = Elm.Main.init({ node: document.getElementById("elm") });
-	</script>
+    <span>Coming soon...</span>
 </body>
 
 </html>
