--- a/play.html
+++ b/play.html
@@ -19,11 +19,14 @@
 			padding: 0.5em;
 			background: #EEE;
 			color: #123;
-			border-bottom: 3px #000 solid;
+		}
+
+		#room {
+			border-top: 3px #000 solid;
 		}
 
 		.switch-notice>a {
-			margin-left: 1em;
+			margin-left: 0.5em;
 			text-decoration: none;
 		}
 
@@ -35,7 +38,7 @@
 
 <body>
 	<div id="elm">Loading...</div>
-	<script src="main.min.js" type="text/javascript"></script>
+	<script src="main.compiled.js" type="text/javascript"></script>
 	<script>
 		var app = Elm.Main.init({ node: document.getElementById("elm") });
 	</script>
