Fixed page title

--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE HTML>
 <html lang="en">
-<!-- Test -->
 
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="Description" content="Simon Gustavsson - Developer of Software">
-	<title>Main</title>
+	<title>Simon Gustavsson</title>
 	<style type="text/css">
 		html,
 		body {
