--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </head>
 
 <body>
-	<div id="elm">Loading...</div>
+	<div id="elm">Loading, please wait...</div>
 	<script src="main.min.js" type="text/javascript"></script>
 	<script>
 		var app = Elm.Main.init({ node: document.getElementById("elm") });
