--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 		body {
 			width: 100%;
 			height: 100%;
-			margin: 0
+			margin: 0;
+			background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('coffee_background.jpeg');
+			background-attachment: fixed;
+			background-size: cover;
 		}
 
 		.switch-notice {
