--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <body>
 	<div id="elm">Loading...</div>
-	<script src="main.compiled.js" type="text/javascript"></script>
+	<script src="main.min.js" type="text/javascript"></script>
 	<script>
 		var app = Elm.Main.init({ node: document.getElementById("elm") });
 	</script>
